--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_install:
 install:
 - nvm install 7
 - npm install electron-packager
+- npm install -g gulp
 - npm install
 - npm prune
 script:
