--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "author": "Jacob Tomlinson",
   "license": "",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "electron": "~1.6.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.6.3"
   },
   "dependencies": {
     "electron-connect": "^0.6.1",
     "electron-settings": "^3.0.14",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "request": "^2.81.0",
     "websocket": "^1.0.24"
   }
