--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,4 +26,8 @@ test_script:
   - gulp compile
   - gulp build-windows
 
+artifacts:
+  - path: 'release_builds\opsdroid-desktop-win32-x64\**\*.exe'
+    name: opsdroid-desktop
+
 build: off
