--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ test_script:
   - npm --version
   - gulp compile
   - gulp build-windows
+  - gulp zip
 
 artifacts:
   - path: 'release_builds\opsdroid-desktop-win32-x64\**\*.zip'
