--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ test_script:
   - npm --version
   - gulp compile
   - gulp build-windows
-  - 7z opsdroid-desktop-win32-x64.zip %APPVEYOR_BUILD_FOLDER%\release_builds\opsdroid-desktop-win32-x64\*
+  - 7z a opsdroid-desktop-win32-x64.zip %APPVEYOR_BUILD_FOLDER%\release_builds\opsdroid-desktop-win32-x64\*
 
 artifacts:
   - path: opsdroid-desktop-win32-x64.zip
