Fix AppVeyor artifact

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,9 +28,9 @@ test_script:
   - 7z a opsdroid-desktop-$(APPVEYOR_REPO_TAG_NAME)-win32-x64.zip %APPVEYOR_BUILD_FOLDER%\release_builds\opsdroid-desktop-win32-x64\*
 
 artifacts:
-  - path: /.*\.zip/
+  - path: '**\*.zip'
     name: opsdroid-desktop
-    
+
 deploy:
   release: $(APPVEYOR_REPO_TAG_NAME)
   description: $(APPVEYOR_REPO_TAG_NAME)
