--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jacob Tomlinson",
   "license": "",
   "devDependencies": {
+    "@babel/core": "^7.1.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "electron": "~3.0.10",
